# ScreenCaptureKit2NDI

./: Cargo.toml  Makefile  README.md  build.rs
framework-sys/: Cargo.toml  build.rs  wrapper.h
ndi-sys/: Cargo.toml  build.rs
osx/SCKitNDI.app/Contents/: Info.plist
sckit/: Cargo.toml
sckit/src/: lib.rs
sckitndi/: Cargo.toml
sckitndi/src/: grabber.rs  main.rs  ndi.rs
src/: main.rs
