[package]
name = "sckitndi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cacao = "0.3"
cocoa-foundation = "0.1"
core-graphics-types = "0.1.1"
once_cell = "1"
objc = "0.2.7"
block = "0.1"
ndi-sys = { path = "../ndi-sys" }
framework-sys = { path = "../framework-sys" }
sckit = { path = "../sckit" }
